# rpi_usb_camera_test

./: .gitignore  Alternative_Style_2.md  CLAUDE.md  HARDWARE_CAMERAS.md  HARDWARE_DEMANDS_PI.md  IMPLEMENTATION_SUMMARY.md  INSTALL_EXTENSIONS.md  PLATFORM.md  README.md  ROBOT_API.md  STREAMS_PICO_SETUP.md  STYLE_GUIDE.md  package.json  pyproject.toml  settings.json  start_server.sh
hardware_test/: discovering_usb_arducam.md
scss/: README.md  _variables.scss  main.scss  settings.scss  streams.scss
src/rpi_camera_stream/: __init__.py  __main__.py  app.py  config.py  settings.py  startup.py
src/rpi_camera_stream/camera/: __init__.py  frame_buffer.py  opencv_capture.py
src/rpi_camera_stream/encoders/: __init__.py  h264.py  mjpeg.py
src/rpi_camera_stream/preview/: __init__.py  local_display.py
src/rpi_camera_stream/robot/: __init__.py  serial_device.py
src/rpi_camera_stream/routes/: __init__.py  api.py  mjpeg.py  settings.py  www.py  www_api.py
src/rpi_camera_stream/socketio_handlers/: __init__.py  video.py
src/rpi_camera_stream/templates/: base.html  index.html  settings.html  streams.html  streams_overview.html  streams_pico.html  streams_simple.html  www_index.html  www_stream.html  www_streams.html
src/rpi_camera_stream/templates/partials/: camera_slot_macro.html  navbar.html
src/rpi_camera_stream/utils/: __init__.py  device_info.py
vendor_packages/: README.md
