[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "rpi-camera-stream"
version = "0.1.0"
description = "Raspberry Pi USB camera streaming server"
readme = "README.md"
license = {text = "GPL-3.0-or-later"}
requires-python = ">=3.9"
dependencies = [
    "flask>=3.0",
    "flask-socketio>=5.3",
    "eventlet>=0.35",
    "opencv-python-headless>=4.8",
    "numpy>=1.24",
    "requests>=2.31",
    "qrcode[pil]>=7.4",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "ruff>=0.1",
]

[project.scripts]
rpi-camera-stream = "rpi_camera_stream.__main__:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"
